--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,5 +18,12 @@
             </intent-filter>
         </activity>
     </application>
+    <!-- 访问网络的权限 -->
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <!-- 文件读取的权限 -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
+        <!-- 向SD卡中创建或者删除的权限。 -->
+    <uses-permission android:name="andorid.permission.MONUN_UNMOUNT_FILESYSTEMS"></uses-permission>
+
+
 </manifest>
