--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         <activity android:name=".activity.LoginActivity"></activity>
         <activity android:name=".activity.ScoreActivity"></activity>
         <activity android:name=".activity.ScoreShowActivity"></activity>
+        <activity android:name=".activity.CourseActivity"></activity>
         <activity android:name=".activity.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
