--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.hp.mycampus">
 
+    <!-- 访问网络的权限 -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <!-- 文件读取的权限 -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <!-- 向SD卡中创建或者删除的权限。 -->
+    <uses-permission android:name="andorid.permission.MONUN_UNMOUNT_FILESYSTEMS" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,24 +16,24 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.MainActivity"></activity>
-        <activity android:name=".activity.LoginActivity"></activity>
-        <activity android:name=".activity.ScoreActivity"></activity>
-        <activity android:name=".activity.ScoreShowActivity"></activity>
-        <activity android:name=".activity.CourseActivity"></activity>
+        <activity android:name=".activity.MainActivity" />
+        <activity android:name=".activity.LoginActivity" />
+        <activity android:name=".activity.ScoreActivity" />
+        <activity android:name=".activity.ScoreShowActivity" />
         <activity android:name=".activity.SplashActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activity.CourseActivity" />
+        <activity android:name=".activity.AddCourseActivity"
+            android:label="新建课程"
+            android:theme="@style/Theme.AppCompat.Light.Dialog" />
+        <activity android:name=".activity.FillActivity"
+            android:label="测试"
+            android:theme="@style/Theme.AppCompat.Light.Dialog"/>
     </application>
-    <!-- 访问网络的权限 -->
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
-    <!-- 文件读取的权限 -->
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
-        <!-- 向SD卡中创建或者删除的权限。 -->
-    <uses-permission android:name="andorid.permission.MONUN_UNMOUNT_FILESYSTEMS"></uses-permission>
-
 
 </manifest>
