--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     implementation files('libs/jsoup-1.8.3.jar')
     implementation 'androidx.cardview:cardview:1.0.0-alpha1'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
+    implementation 'com.google.android.material:material:1.0.0-alpha1'
 }
