--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,16 +21,22 @@
         <activity android:name=".activity.ScoreActivity" />
         <activity android:name=".activity.ScoreShowActivity" />
         <activity android:name=".activity.SplashActivity">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
 
+        </activity>
+        <activity android:name=".activity.CourseActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.CourseActivity" />
         <activity android:name=".activity.AddCourseActivity"
-            android:label="新建课程"
-            android:theme="@style/Theme.AppCompat.Light.Dialog" />
+            android:theme="@style/Base.Theme.AppCompat.Light.Dialog"
+            android:windowSoftInputMode="stateVisible|adjustResize"/>
         <activity android:name=".activity.FillActivity"
             android:label="测试"
             android:theme="@style/Theme.AppCompat.Light.Dialog"/>
