--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <!-- 向SD卡中创建或者删除的权限。 -->
     <uses-permission android:name="andorid.permission.MONUN_UNMOUNT_FILESYSTEMS" />
 
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -16,30 +17,32 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.MainActivity" />
+        <activity android:name=".activity.MainActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".activity.LoginActivity" />
         <activity android:name=".activity.ScoreActivity" />
         <activity android:name=".activity.ScoreShowActivity" />
         <activity android:name=".activity.SplashActivity">
 
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-
         </activity>
         <activity android:name=".activity.CourseActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+
         </activity>
-        <activity android:name=".activity.AddCourseActivity"
+        <activity
+            android:name=".activity.AddCourseActivity"
             android:theme="@style/Base.Theme.AppCompat.Light.Dialog"
-            android:windowSoftInputMode="stateVisible|adjustResize"/>
-        <activity android:name=".activity.FillActivity"
+            android:windowSoftInputMode="stateVisible|adjustResize" />
+        <activity
+            android:name=".activity.FillActivity"
             android:label="测试"
-            android:theme="@style/Theme.AppCompat.Light.Dialog"/>
+            android:theme="@style/Theme.AppCompat.Light.Dialog" />
+        <activity android:name=".activity.ExpressActivity">
+
+        </activity>
     </application>
 
 </manifest>
