--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,6 @@
     <!-- 向SD卡中创建或者删除的权限。 -->
     <uses-permission android:name="andorid.permission.MONUN_UNMOUNT_FILESYSTEMS" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -17,54 +16,31 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.MainActivity" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".activity.MainActivity" />
         <activity android:name=".activity.LoginActivity" />
         <activity android:name=".activity.ScoreActivity" />
         <activity android:name=".activity.ScoreShowActivity" />
-<<<<<<< HEAD
         <activity android:name=".activity.NewsActivity" />
         <activity android:name=".activity.AddTimeActivity" />
         <activity android:name=".activity.NewsShowActivity" />
         <activity android:name=".activity.TimeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-=======
-        <activity android:name=".activity.SplashActivity">
->>>>>>> 51f9f08bb717f471176a94a7982a5609dcf227eb
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
-<<<<<<< HEAD
         <activity android:name=".activity.CourseActivity" />
         <activity
             android:name=".activity.AddCourseActivity"
             android:label="新建课程"
             android:theme="@style/Theme.AppCompat.Light.Dialog" />
-=======
-        <activity android:name=".activity.CourseActivity">
-
-        </activity>
-        <activity
-            android:name=".activity.AddCourseActivity"
-            android:theme="@style/Base.Theme.AppCompat.Light.Dialog"
-            android:windowSoftInputMode="stateVisible|adjustResize" />
->>>>>>> 51f9f08bb717f471176a94a7982a5609dcf227eb
         <activity
             android:name=".activity.FillActivity"
             android:label="测试"
             android:theme="@style/Theme.AppCompat.Light.Dialog" />
-<<<<<<< HEAD
 
         <activity android:name=".activity.LostActivity" />
-=======
-        <activity android:name=".activity.ExpressActivity">
-
-        </activity>
->>>>>>> 51f9f08bb717f471176a94a7982a5609dcf227eb
     </application>
 
 </manifest>
